--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="body">
 	<div class="main_content">
 		<div class="main_wrapper">
-			<h1 id="h1" data-aos="fade-up" data-aos-duration="1500" >Hi, I'm Juan Pablo, Junior Front end Developer</h1>
+			<h1 id="h1" data-aos="fade-up" data-aos-duration="1500" >Hi, I'm Juan Pablo, Front end Developer Junior</h1>
 			<p>Fresh, kind, and proactive man wants to continue his adventure on his constant growing, adding to the mix all the learned knowledge collected, applying the concepts accomplished in customer service as empathy, assertive read, and assertive communication.</p>
 			<p>On the other hand, currently studying Software Development, enjoying a lot the design, thinking and drawing layouts, and exploring that awesome world that Front end development can brings; also handling CRUD methods on database management.</p>
 			<br>
