changing Particles link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   		AOS.init();
 	</script>
 	<script src="App.js"></script>
-	<script src="/particles.min.js"></script>
+	<script src="particles.min.js"></script>
 	<script>
 			particlesJS(
 {
